--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.0.0",
     "astro": "^4.0.0",
-    "@astrojs/mdx": "^2.0.0"
+    "mdx": "^0.3.1",
+    "vite": "^7.3.1"
   }
 }
